cabal-version:   3.0
name:            twothousandtwentytwo
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall -fprof-auto -rtsopts

executable example
    import:           warnings
    main-is:          2222.hs
    build-depends:    base, file-embed, split
    hs-source-dirs:   src
    default-language: Haskell2010
